[project]
name = "uc-intg-demo"
version = "1.1.1"
description = "Unfolded Circle Integration Demo"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

authors = [
    { name = "Jack Powell", email = "jack.powell@example.com" }
]

# TODO: Update repository URL
urls.Homepage = "https://github.com/jackjpowell/uc-intg-demo"
urls.Repository = "https://github.com/jackjpowell/uc-intg-demo"

dependencies = [
    "ucapi @ file:lib/ucapi-0.5.3.dev0+gd11cfea3f.d20260320-py3-none-any.whl",
    "ucapi-framework==1.9.1",
    "pyee>=9.0",
]
